WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235449
REGRESSION(
r282320
): [Cocoa] User-installed fonts don't work in the GPU Process (in WKWebView)
https://bugs.webkit.org/show_bug.cgi?id=235449
Summary
REGRESSION(r282320): [Cocoa] User-installed fonts don't work in the GPU Proce...
Myles C. Maxfield
Reported
2022-01-21 11:18:19 PST
[Cocoa] User-installed fonts don't work in the GPU Process (in WKWebView)
Attachments
WIP
(5.10 KB, patch)
2022-01-21 11:19 PST
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(7.91 KB, patch)
2022-01-21 12:38 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(8.46 KB, patch)
2022-01-21 13:03 PST
,
Myles C. Maxfield
darin
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(9.97 KB, patch)
2022-01-24 20:28 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(10.06 KB, patch)
2022-01-24 20:29 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(10.06 KB, patch)
2022-01-24 20:30 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-01-21 11:19:17 PST
Created
attachment 449673
[details]
WIP
Myles C. Maxfield
Comment 2
2022-01-21 11:19:48 PST
<
rdar://problem/84958961
>
Myles C. Maxfield
Comment 3
2022-01-21 11:34:22 PST
Comment on
attachment 449673
[details]
WIP View in context:
https://bugs.webkit.org/attachment.cgi?id=449673&action=review
> Source/WebCore/PAL/pal/spi/cf/CoreTextSPI.h:99 > +typedef CF_OPTIONS(uint32_t, CTFontDescriptorOptions) { > +};
Apparently there has to be something inside the {}s :(
Myles C. Maxfield
Comment 4
2022-01-21 12:38:09 PST
Created
attachment 449687
[details]
Patch
Myles C. Maxfield
Comment 5
2022-01-21 13:03:14 PST
Created
attachment 449689
[details]
Patch
Darin Adler
Comment 6
2022-01-21 13:38:05 PST
Comment on
attachment 449689
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=449689&action=review
> Source/WebCore/PAL/pal/spi/cf/CoreTextSPI.h:100 > +typedef CF_OPTIONS(uint32_t, CTFontDescriptorOptions) { > + kCTFontDescriptorOptionThisIsNotARealOption = 0xFFFFFFFF > +};
Or we could just typedef it to uint32_t.
> Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:468 > encoder << String(string);
Seems a shame we have to convert CFString to String just to encode it on the wire. A repeated pattern.
Myles C. Maxfield
Comment 7
2022-01-24 12:23:01 PST
Comment on
attachment 449689
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=449689&action=review
>> Source/WebCore/PAL/pal/spi/cf/CoreTextSPI.h:100 >> +}; > > Or we could just typedef it to uint32_t.
Do you think the typedef is preferable? I think I actually prefer the CF_OPTIONS thing, just because it more closely matches the original source. I don't want to delay this bug fix any longer, so I'll land this as is and if you prefer the typedef I'll make a follow-up patch.
>> Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:468 >> encoder << String(string); > > Seems a shame we have to convert CFString to String just to encode it on the wire. A repeated pattern.
I believe we send CFStrings in other places ... let me see if I can fix this...
Darin Adler
Comment 8
2022-01-24 12:28:12 PST
Comment on
attachment 449689
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=449689&action=review
>>> Source/WebCore/PAL/pal/spi/cf/CoreTextSPI.h:100 >>> +}; >> >> Or we could just typedef it to uint32_t. > > Do you think the typedef is preferable? I think I actually prefer the CF_OPTIONS thing, just because it more closely matches the original source. > > I don't want to delay this bug fix any longer, so I'll land this as is and if you prefer the typedef I'll make a follow-up patch.
This is fine. I didn’t mean to cause delay!
Myles C. Maxfield
Comment 9
2022-01-24 15:45:44 PST
Comment on
attachment 449689
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=449689&action=review
>>> Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:468 >>> encoder << String(string); >> >> Seems a shame we have to convert CFString to String just to encode it on the wire. A repeated pattern. > > I believe we send CFStrings in other places ... let me see if I can fix this...
Oh, yeah, of course - ArgumentCodersCF.h!
Darin Adler
Comment 10
2022-01-24 15:46:49 PST
Comment on
attachment 449689
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=449689&action=review
>>>> Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:468 >>>> encoder << String(string); >>> >>> Seems a shame we have to convert CFString to String just to encode it on the wire. A repeated pattern. >> >> I believe we send CFStrings in other places ... let me see if I can fix this... > > Oh, yeah, of course - ArgumentCodersCF.h!
Should find the others who are calling String() just to encode a CFStringRef. I bet this is not the only place.
Myles C. Maxfield
Comment 11
2022-01-24 20:28:09 PST
Created
attachment 449891
[details]
Patch for committing
Myles C. Maxfield
Comment 12
2022-01-24 20:29:23 PST
Created
attachment 449892
[details]
Patch for committing
Myles C. Maxfield
Comment 13
2022-01-24 20:30:32 PST
Created
attachment 449893
[details]
Patch for committing
Darin Adler
Comment 14
2022-01-24 21:33:15 PST
Comment on
attachment 449893
[details]
Patch for committing View in context:
https://bugs.webkit.org/attachment.cgi?id=449893&action=review
Fine to land as-is, but I see one further refinement.
> Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:486 > auto currentPostScriptName = adoptCF(static_cast<CFStringRef>(CTFontDescriptorCopyAttribute(fontDescriptor, kCTFontNameAttribute)));
Given we only call CFEqual on this, we don’t need the static_cast to CFStringRef. I suggest just taking it out.
Myles C. Maxfield
Comment 15
2022-01-24 22:44:54 PST
Comment on
attachment 449893
[details]
Patch for committing View in context:
https://bugs.webkit.org/attachment.cgi?id=449893&action=review
>> Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:486 >> auto currentPostScriptName = adoptCF(static_cast<CFStringRef>(CTFontDescriptorCopyAttribute(fontDescriptor, kCTFontNameAttribute))); > > Given we only call CFEqual on this, we don’t need the static_cast to CFStringRef. I suggest just taking it out.
🆒 I think I agree with you. This is more readable now.
Myles C. Maxfield
Comment 16
2022-01-24 23:13:47 PST
Committed
r288543
(
246375@trunk
): <
https://commits.webkit.org/246375@trunk
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug